--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start:prod": "ember serve --environment=production --proxy=https://node-hnapi.herokuapp.com --live-reload=false --port=$PORT",
     "test": "ember test",
     "bench": "node ./benching/index.js",
-    "serve": "node --expose-gc ./benching/server.js"
+    "serve": "node --expose-gc ./benching/server.js",
+    "heroku-prebuild": "npm i -g ember-cli@github:ember-cli/ember-cli"
   },
   "devDependencies": {
     "@glimmer/application": "^0.5.1",
