--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "serve": "node --expose-gc ./benching/server.js",
     "heroku-prebuild": "npm i -g ember-cli@github:ember-cli/ember-cli"
   },
-  "devDependencies": {
+  "engines": {
+    "node": "6"
+  },
+  "private": true,
+  "dependencies": {
     "@glimmer/application": "^0.5.1",
     "@glimmer/application-pipeline": "^0.7.0",
     "@glimmer/component": "^0.4.0",
@@ -25,19 +29,14 @@
     "chrome-tracing": "^0.9.0",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli-sass": "^6.2.0",
     "ember-cli-uglify": "^1.2.0",
     "express": "^4.8.5",
     "glob": "^7.1.1",
     "har-remix": "^1.2.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.3.2",
+    "route-recognizer": "^0.3.3",
     "typescript": "^2.2.2"
-  },
-  "engines": {
-    "node": ">= 6"
-  },
-  "private": true,
-  "dependencies": {
-    "route-recognizer": "^0.3.3"
   }
 }
