--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "private": true,
   "dependencies": {
-    "@glimmer/application": "^0.5.1",
+    "@glimmer/application": "^0.6.0",
     "@glimmer/application-pipeline": "^0.7.0",
-    "@glimmer/component": "^0.4.0",
+    "@glimmer/component": "^0.5.0",
     "@glimmer/resolver": "^0.3.0",
     "broccoli-asset-rev": "^2.5.0",
     "broccoli-serviceworker": "^0.1.6",
     "chrome-tracing": "^0.9.0",
-    "ember-cli": "github:ember-cli/ember-cli",
+    "ember-cli": "^2.14.0-beta",
     "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-sass": "^6.2.0",
     "ember-cli-uglify": "^1.2.0",
